# Logger

./: .gitignore  CMakeLists.txt  README.md  classdiagram.qmodel  main.cpp  main.qml
qml/: MainPage.qml
qml/elements/: AppButton.qml  AppText.qml
qml/panels/: ExecutablePanel.qml  FilePanel.qml  LogsPanel.qml  NetworkPanel.qml  SearchingAndFilteringPanel.qml
qml/utilities/: Theme.qml
server/: CMakeLists.txt  main.cpp
src/controllers/: BasicController.cpp  BasicController.h  DatabaseController.cpp  DatabaseController.h  ExternalAppsController.cpp  ExternalAppsController.h  FileController.cpp  FileController.h  NetworkController.cpp  NetworkController.h
src/datasets/: LogEntry.cpp  LogEntry.h
src/models/: LoggerDataModel.cpp  LoggerDataModel.h  LoggerDataSortFilterProxyModel.cpp  LoggerDataSortFilterProxyModel.h
src/providers/: ExternalAppProvider.cpp  ExternalAppProvider.h
src/templates/: MyVector.h
testApps/: CMakeLists.txt
testApps/RandomNumbersGenerator/: CMakeLists.txt  main.cpp
